src/app/mail/mail.component.scss
/* ... */
.mail-list-col-row {
  display: flex;
  align-items: center;
  margin: 0 -0.375rem;
}

.mail-list-col-row > .mail-list-col-item {
  padding: 0 0.375rem;

  @include media("<=sm") {
    &.mail-status {
      position: absolute;
      top: 2.75rem;
      right: 0.375rem;
    }
  }
}

.mail-list-col-xs-row {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  margin: 0 -0.5rem;

  @include media(">=laptop") {
    margin: 0 -0.75rem;
  }
}

.mail-list-col-xs-row > .mail-list-col-xs-item {
  padding: 0 0.5rem;

  @include media(">=laptop") {
    padding: 0 0.75rem;
  }
}

.mail-list-row {

  td {
    padding: 1rem;
    vertical-align: middle;
    border-top: unset;
  }

  .icon-star {
    font-size: 0.938rem;
    color: $input-border-color;
  }

  &.is-unread .mail-from-name,
  &.is-unread .mail-subject {
    font-weight: bold;
  }

  .mail-checkbox,
  .mail-status {
    width: 1.5rem;
  }

  .mail-inbox-message,
  .mail-from-name{
    padding: 0;
    font-size: 14px;
    a {
      display: inline-block;
      width: 100%;
      padding: 1rem;
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
    }
  }

  .mail-file-size,
  .mail-sent-date {
    font-size: 0.75rem;
    width: 5rem;

    @include media("<=sm") {
      font-size: 0.75rem;
    }
  }

  .mail-security-status.is-disabled {
    color: $input-border-color;
  }

  .mail-security-status {
    width: 4rem;
    color: #34495e;
  }

  .mail-status-type .icon-star {
    color: $dropdown-border-color;
  }

  .mail-status-type.is-fav .icon-star-filled {
    color: $brand-warning;
  }

  .icon {
    font-size: 0.938rem;
  }

  .mail-from-name {
    width: 12.5rem;
    vertical-align: middle;
  }

  .mail-subject .mail-content{
    display: inline-block;
    vertical-align: middle;
  }

  .mail-desc {
    display: flex;
    align-items: center;

    @include media("<=sm") {
      flex-wrap: wrap;
      margin-top: 0.25rem; //~0.5rem;
      padding-left: 1.875rem;
      padding-right: 0.938rem;
      line-height: 1.29;

      small {
        font-size: 0.875rem;
      }
    }

    @include media(">sm") {
      overflow: hidden;
      text-overflow: ellipsis;
      white-space: nowrap;
    }
  }
  @include media("<sm") {
    .fancy-field-group{
      position: absolute;
      top: 18px;
      left: 15px;
    }
    .mail-from-name{
      position: relative;
      padding-top: 15px;
      a{
        padding: 0 0 10px;
      }
      .text-danger{
        font-size: 16px;
      }
      span{
        display: block;
      }
      .mail-file-size{
        position: absolute;
        top: 17px;
        right: 0;
        width: auto;
      }
      .mail-sent-date{
        position: absolute;
        top: 17px;
        right: 40px;
        width: auto;
      }
    }
    .mail-status{
      width: 1rem;
      text-align: right;
      .mail-security-status{
        width: auto;
        display: block;
        margin-bottom: 10px;
      }
    }
    &.hide-on-mobile {
      display: none;
    }
  }
}

.badge {
  border-radius: 3px;
}

.badge.badge-success{
  background-color: #007421;
}

.badge.badge-warning{
  background-color: #ff9500;
}

.badge.badge-danger{
  background-color: #ff4f41;
}

// .mail-delete-badge {
//   margin-right: 0.938rem;

//   @include media("<=sm") {
//     margin: 0 0 0.5rem 0;
//     display: block;
//     width: 100%;
//   }

//   .badge {
//     padding: 0.21rem 0.5rem 0.23rem 0.5rem;
//     line-height: 1;
//   }
// }

/* Mail list ends */

// == Mail composer

// == Mail composer ends

// == UI styles
.ui-body {
  padding: 1.25rem 0.938rem;

  @include media(">=ipad") {
    padding: 1.25rem 1.563rem;
  }

  &.is-xs {
    padding: 0.875rem 0.938rem;

    @include media(">=ipad") {
      padding: 0.875rem 1.563rem;
    }
  }

  &.is-bordered-bottom {
    border-bottom: 1px solid #f2f2f2;
  }
  @include media("<sm") {
      &.ui-footer-sec{
        background: #fafafa;
        text-align: center;
        .btn-gmail{
          background: none;
          border: none;
          font-size: 0;
          i{
            display: none;
          }
        }
      }
  }
}

// == Sender content
.sender-content-list {
  > li {
    font-size: 14px;

    &:not(:last-of-type) {
      margin-bottom: 0.313rem;
    }
  }
}

.actions-btn.msg-reply-btn {
  &::before {
    right: auto;
    left: 50%;
    height: 0.55rem;
    width: 0.55rem;
    transform: translateX(-50%) translateY(-50%) rotate(135deg)
  }
}

.show.dropdown {
  .actions-btn.msg-reply-btn::before {
    transform: translateX(-50%) translateY(-50%) rotate(-45deg)
  }
}

.msg-reply-type-holder {
  line-height: 1;
}

.msg-received-time {
  margin-right: 0.938rem;
  font-size: 12px;
}

// == Message reply dropdown
.dropdown-xs.msg-reply-dropdown {
  .dropdown-item {
    padding: 0.625rem .938rem;
    font-size: .75rem;
  }
}

.msg-reply-dropdown .dropdown-menu {
  min-width: 155px;
}

// == Msg reply content
.msg-reply-content {
  line-height: 1.43;
}

/* ==================================== */
/*              NG-Bootstrap            */
/* ==================================== */

// == Date timer picker
.ng-datepicker {
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.12);
  font-family: "Lato", Helvetica, Arial, sans-serif;
}

.ng-datepicker-265 {
  max-width: 265px;
  width: 100%;
}

.ngb-dp-header {
  padding-top: 1rem !important;
  background: $brand-faded;
}

.ngb-dp-arrow {
  height: 2.5rem !important;
}

.ngb-dp-arrow .ngb-dp-arrow-btn.btn {
  margin-left: 0.75rem;
  color: #636c72 !important;
  min-width: inherit;
  opacity: .65;
}

.ngb-dp-arrow.right {
  .ngb-dp-arrow-btn.btn {
    margin-right: 0.75rem;
  }
}

.ngb-dp-navigation-select {
  margin-left: 0.375rem;
}

.ngb-dp-month {
  width: 100%;
}

.ngb-dp-month:first-child .ngb-dp-week {
  padding-left: 0.5rem !important;
}

.ngb-dp-month:last-child .ngb-dp-week {
  padding-right: 0.5rem !important;
}
/* ... */

